--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Association Chablaisienne d'Improvisation Théatrale
+title: "Association Chablaisienne d'Improvisation Théatrale"
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   Bienvenue sur le site de l'Association Chablaisienne d'Improvisation Théatrale
@@ -21,6 +21,8 @@ twitter_username: username
 github_username: username
 minimal_mistakes_skin: "air" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 search: true
+url: "https://didiercoignet.github.io"
+baseurl: cia
 
 # Build settings
 markdown: kramdown
@@ -29,7 +31,7 @@ remote_theme: mmistakes/minimal-mistakes
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: "Europe/Paris" # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 include:
   - _pages
@@ -55,27 +57,27 @@ plugins:
   - jemoji
   - jekyll-include-cache
 
-author:
-  name   : "First Lastname"
-  avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
-  links:
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+##author:
+##  name   : "First Lastname"
+##  avatar : "/assets/images/bio-photo.jpg"
+##  bio    : "My awesome biography constrained to a sentence or two goes here."
+##  links:
+##    - label: "Website"
+##      icon: "fas fa-fw fa-link"
+##      url: "https://"
+##    - label: "Twitter"
+##      icon: "fab fa-fw fa-twitter-square"
+##      url: "https://twitter.com/"
+##    - label: "GitHub"
+#      icon: "fab fa-fw fa-github"
+#      url: "https://github.com/"
+#    - label: "Instagram"
+#      icon: "fab fa-fw fa-instagram"
+#      url: "https://instagram.com/"
 
 footer:
   links:
-    - label: "Twitter"
+#    - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/"
     - label: "GitHub"
