--- a/_config.yml
+++ b/_config.yml
@@ -57,16 +57,16 @@ plugins:
   - jemoji
   - jekyll-include-cache
 
-##author:
-##  name   : "First Lastname"
-##  avatar : "/assets/images/bio-photo.jpg"
-##  bio    : "My awesome biography constrained to a sentence or two goes here."
-##  links:
+author:
+  name   : "First Lastname"
+  avatar : "/assets/images/bio-photo.jpg"
+  bio    : "My awesome biography constrained to a sentence or two goes here."
+  links:
 ##    - label: "Website"
 ##      icon: "fas fa-fw fa-link"
 ##      url: "https://"
-##    - label: "Twitter"
-##      icon: "fab fa-fw fa-twitter-square"
+    - label: "Facebook"
+      icon: "fab fa-fw fa-facebook-square"
 ##      url: "https://twitter.com/"
 ##    - label: "GitHub"
 #      icon: "fab fa-fw fa-github"
@@ -77,7 +77,7 @@ plugins:
 
 footer:
   links:
-#    - label: "Twitter"
+    - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/"
     - label: "GitHub"
@@ -105,7 +105,7 @@ defaults:
       type: pages
     values:
       layout: single
-      author_profile: true
+      author_profile: false
 
 category_archive:
   type: liquid
